(chore) test socket